--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
                 <button class="btn" type="button"><a href="#" class="btn-link" >Get Started</a></button>
             </div>
             <div class="col-md-6">
-                <img src="Image/x.png" width="100%" >
+                <img src="x.png" width="100%"  alt="phone photo">
             </div>
         </div>
     </div>
